# ubuntu-location-provider-geoclue2

data/: CMakeLists.txt  ubuntu-location-provider-geoclue2.conf
debian/: changelog  control  postinst  prerm
